--- a/src/assets/styles/components/_pageRecursos.scss
+++ b/src/assets/styles/components/_pageRecursos.scss
@@ -3,6 +3,25 @@
 @import '../mixins';
 
 //STYLES
+div.MODALC{
+    @include box-shadow-style;
+    border-radius: 1rem;
+    padding: 2rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    font-size: large;
+    font-family: $tipografia;
+    h2{
+        font-size: larger;
+    }
+    button{
+        @include boton-generico;
+        margin: .5rem;
+        font-size: large;
+    }
+}
 div.bigContainerRecursos {
     display: flex;
     flex-direction: column;
@@ -40,14 +59,23 @@ div.bigContainerRecursos {
         }
 
         article.recursos {
-            button.CreateRecurso{
+            button.CreateRecurso {
                 @include boton-generico;
-                margin-left: auto;
+                //margin-left: auto;
                 font-size: medium;
                 margin-bottom: .5rem;
                 margin-right: .5rem;
             }
-            
+            .CreateRecurso-D{
+                @include boton-generico;
+                margin-left: auto;
+                float: right;
+                font-size: medium;
+                margin-bottom: .5rem;
+                margin-right: .5rem;
+                font-size: larger;
+            }
+
             flex-grow: .80;
             height: fit-content;
             background-color: $color-blanco;
@@ -153,7 +181,7 @@ div.bigContainerRecursos {
             article.recursos {
                 flex-grow: .85;
                 height: fit-content;
-                
+
                 //background-color: bisque;
                 padding: 1rem;
                 border-radius: 1rem;
