--- a/src/assets/styles/components/_correo.scss
+++ b/src/assets/styles/components/_correo.scss
@@ -9,7 +9,7 @@ div.Correo-main-container {
     width: 100%;
     height: 100%;
     @include centrar-elemento;
-    h2{
+    h2.NOCURSOS{
         font-size: x-large;
         @include box-shadow-style;
         padding: 1.5rem;
